--- a/src/components/layout/navbar/style.css
+++ b/src/components/layout/navbar/style.css
@@ -1,19 +1,28 @@
 nav {
-    background-Color:black;
+    background-Color:white;
     display:flex;
     justify-content: center;
     align-items: center;
     text-decoration: none;
     font-weight: bold;
     height:64px;
-    border-bottom:solid 1px rgb(221, 221, 221);
     margin-top:65px;
     /* color:rgb(255, 31, 98); */
 }
-#logo {
+/* #logo {
     background-image: url('https://media-public.canva.com/MAC6nELjDIw/1/thumbnail_large.jpg');
     background-clip: text;
 -webkit-background-clip: text;
 color: transparent
+} */
+.MuiPaper-elevation4 {
+    box-shadow: none!important;
+}
+.MuiButton-label {
+    color:white;
+}
+.MuiToolbar-root.MuiToolbar-regular.MuiToolbar-gutters {
+    background: linear-gradient(to right, #acffff, #8ef7f2, #6eefe4, #4ae7d4, #0adec2);
+    box-shadow: none;
 }
 /* font-family: 'Indie Flower', cursive; */
